# treStatic

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README.md  autonote.txt  configure.ac  regcomp.c  regexec.c  tre-compile.c  tre-match-approx.c  tre-match-backtrack.c  tre-match-parallel.c  tre-parse.c
m4/: m4_ax_generate_changelog.m4
win32/: tre-config.h
